[package]
name = "cache_cleaner"
version = "0.0.0"
description = "FlightClub Internal Cache Removeer"
authors = ["Sebastian"]
license = ""
repository = ""
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
dirs = "5.0.1"
ssh2 = "0.9"
